# ChangeLog for dev-libs/icu
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.84 2009/04/18 17:33:16 armin76 Exp $

  18 Apr 2009; Raúl Porcel <armin76@gentoo.org> icu-4.0.1.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #239538

  18 Apr 2009; Tobias Klausmann <klausman@gentoo.org> icu-4.0.1.ebuild:
  Stable on alpha, bug #239538

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> icu-4.0.1.ebuild:
  Stable for HPPA (bug #239538).

  15 Apr 2009; Markus Meier <maekke@gentoo.org> icu-4.0.1.ebuild:
  amd64/x86 stable, bug #239538

  15 Apr 2009; Brent Baude <ranger@gentoo.org> icu-4.0.1.ebuild:
  Marking icu-4.0.1 ppc64 and ppc for bug 239538

  14 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/icu-4.0.1-TestDisplayNamesMeta.patch, icu-4.0.1.ebuild:
  Fix TestDisplayNamesMeta test (bug #265352).

  14 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/icu-4.0.1-fix_parallel_building.patch, icu-4.0.1.ebuild:
  Fix parallel building (bug #265128).

*icu-4.0.1 (05 Apr 2009)

  05 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  metadata.xml, +icu-4.0.1.ebuild:
  Version bump (bug #248912).

  20 Feb 2008; Steve Dibb <beandog@gentoo.org> icu-3.6-r2.ebuild:
  amd64 stable, security bug 208001

  10 Feb 2008; Olivier Crête <tester@gentoo.org> icu-3.8.1-r1.ebuild:
  Stable amd64, security bug #208001

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> icu-3.6-r2.ebuild,
  icu-3.8.1-r1.ebuild:
  alpha/ia64/sparc stable wrt security #208001

  04 Feb 2008; Christian Faulhammer <opfer@gentoo.org> icu-3.6-r2.ebuild,
  icu-3.8.1-r1.ebuild:
  stable x86, security bug 208001

  03 Feb 2008; Jeroen Roovers <jer@gentoo.org> icu-3.6-r2.ebuild,
  icu-3.8.1-r1.ebuild:
  Stable for HPPA (bug #208001).

  03 Feb 2008; Brent Baude <ranger@gentoo.org> icu-3.8.1-r1.ebuild:
  Marking icu-3.8.1-r1 ppc and ppc64 for bug 208001
