@@ -16,8 +16,8 @@ DIST icu4c-4_0-docs.zip 4366805 RMD160 ce81012d86ff609b443b710f822f107d629a75ed 
 DIST icu4c-4_0_1-src.tgz 12356471 RMD160 e40e7ffddd3134a34fe7e7bc98d776c5b67b637c SHA1 65a65e9cd5670e113031def9448f65fb8f84f47a SHA256 fe4d33cc7393c355df7b13080e1c3717ec1acac2f8cfe452b691f33c5f467259
 EBUILD icu-3.6-r1.ebuild 914 RMD160 f35022620c99fa9d5afbeac6fd2f7ae53bb7c2a6 SHA1 65da8dbe37454bec6e8c23325514b01880b101b8 SHA256 24e110608a02c5d12f2fa2bdbb86ff1e6eb6626a999147cbc054a653a45983c5
 EBUILD icu-3.6-r2.ebuild 991 RMD160 8904e364dd711e7bcfd044fba54767c13afa40f8 SHA1 bcb061c482dae441ec0ae0d7bc4164d339e4346c SHA256 ff6d3a8ac32bd5490dcf5e3cd9a0004ac285099c3f79362de47ca4b30822cd92
-EBUILD icu-3.8.1-r1.ebuild 2425 RMD160 62dd83ece8ab4b6f843b562a7b0c1a7e31459218 SHA1 489cb381229ade13752f41ea2471e06b69b762ae SHA256 8a307d4dd1e2d465c0b32bc35d2e578f6f64dfcf0d3da637f37f065b897e3356
+EBUILD icu-3.8.1-r1.ebuild 2532 RMD160 0256f1d3117c5c1370293218a7a38c91edf2d9a2 SHA1 ec43bf723f9cece3619254cfc76d296633a08f20 SHA256 bbcf3b979807c7aec520500da8fd623b9d0c4d72823bea2e296669fd6d2ae13d
 EBUILD icu-3.8.1.ebuild 2146 RMD160 158d1c903f6a2a96e844f81fbfe026c0d649786e SHA1 7782aa058d3bd7d1baeb30fe2bd31043bf542474 SHA256 61e04f4042cbd8743b154030d67e4cb18ebfea59a3938be13da45f4b493f271d
-EBUILD icu-4.0.1.ebuild 2300 RMD160 e7cecc9c375e8f63a05cc49434765e7df18e8ddb SHA1 536675de2c09fa236343ace2fabd3f545f677ca6 SHA256 84a9ce33920e0e218b2c409be870c8887263fb440069382c1031da0370373106
-MISC ChangeLog 10009 RMD160 fd8c4998f34db33347fdd6c665b68bebc7726c41 SHA1 ef2d93d226743fd8f8aadba7fb74f68f287fac10 SHA256 d087eb5c502c1b139729456addb5509de2631fff4f731ce36de15b774fadca52
+EBUILD icu-4.0.1.ebuild 2406 RMD160 d79f69dab400729c859568cb27074ed2f7aac434 SHA1 4faee1effd77b703a4bde8e9f7c30142d4ce3d38 SHA256 2c8885f5aa49ae5e53edcea79c42bd10ffeae51ad55a94b2b79e01d1bd00adcf
+MISC ChangeLog 10210 RMD160 e8eefce9d7dff4100dec2112ad884e2daa181eda SHA1 498d37f49c8b9d61e7d094ad7cc6f3e22ef12d39 SHA256 ec4ee1b42f691e75805524898ebe100920c3fe210aeb4da5224c0e9fc67edf21
 MISC metadata.xml 274 RMD160 c5ce174bf40a37d632d003bab5e2c5b97777a1c6 SHA1 ccf8f018b8d3a49a1557b5f77e29802cbbc6140d SHA256 b2c70fe9d0595a367c5d41793662a02d301f77b09b6dc70f5b675c2725419a6a
