@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/icu-4.0.1.ebuild,v 1.8 2009/04/18 17:33:16 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/icu-4.0.1.ebuild,v 1.9 2009/05/08 00:39:40 loki_val Exp $
 
 EAPI="2"
 
@@ -53,6 +53,9 @@ src_prepare() {
 	for x in CFLAGS CXXFLAGS CPPFLAGS LDFLAGS ; do
 		sed -i -e "/^${x} =.*/s:@${x}@::" config/Makefile.inc.in || die "sed failed"
 	done
+
+	# Bug 258377
+	sed -i -e 's:^#elif$:#else:g' ${S}/layoutex/ParagraphLayout.cpp || die 'elif sed failed'
 
 	epatch "${FILESDIR}/${P}-fix_parallel_building.patch"
 	epatch "${FILESDIR}/${P}-TestDisplayNamesMeta.patch"
