@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/icu
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.84 2009/04/18 17:33:16 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.85 2009/05/08 00:39:40 loki_val Exp $
+
+  08 May 2009; Peter Alfredsen <loki_val@gentoo.org> icu-3.8.1-r1.ebuild,
+  icu-4.0.1.ebuild:
+  Fix bug 258377, gcc-4.4 compatibility. Thanks to Daniel J.
+  <sleeperseven@hotmail.com> for the patch.
 
   18 Apr 2009; Raúl Porcel <armin76@gentoo.org> icu-4.0.1.ebuild:
   arm/ia64/s390/sh/sparc stable wrt #239538
